# SfmlTetris

./: .gitignore  CMakeLists.txt  main.cpp
source/: Game.cpp  Game.h  State.cpp  State.h
source/config/: gamestate_keybinds.ini  supported_keys.ini  window.ini
source/entities/: Entity.cpp  Entity.h
source/resources/: Button.cpp  Button.h
source/states/: GameState.cpp  GameState.h  MainMenuState.cpp  MainMenuState.h  State.cpp  State.h
